# bus-subscription-system

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
client/src/network/: NetworkManager.cpp  NetworkManager.h
client/src/views/: AdminDashboard.cpp  AdminDashboard.h  LoginView.cpp  LoginView.h  UserDashboard.cpp  UserDashboard.h
server/: CMakeLists.txt
server/src/: Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
server/src/logic/: BusinessLogic.cpp  BusinessLogic.h  DataStore.cpp  DataStore.h
server/src/models/: Models.h
shared/: CMakeLists.txt
shared/include/: INetworkClient.h  Messages.h
tests/: CMakeLists.txt
tests/src/: test_business_logic.cpp
